--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "rellax": "^1.12.1"
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20",
