--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d out -t true",
+    "static": "next build && touch ./out/.nojekyll && echo 'www.mywebsite.com' > ./out/CNAME"
   },
   "dependencies": {
     "next": "14.2.3",
@@ -21,6 +23,7 @@
     "@types/rellax": "^1.7.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "gh-pages": "^6.1.1",
     "typescript": "^5"
   }
 }
