change content, fix images, add mdx

--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "gh-pages -d out -t true",
-    "static": "next build && touch ./out/.nojekyll && echo 'www.mywebsite.com' > ./out/CNAME"
+    "static": "next build && touch ./out/.nojekyll && echo 'www.gertz.at.' > ./out/CNAME",
+    "deploy": "gh-pages -d out -t true"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.4",
+    "@types/mdx": "^2.0.13",
     "next": "14.2.3",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.4"
+    "remark-parse": "^11.0.0",
+    "sharp": "^0.33.4",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
